@@ -1,3 +1,7 @@
+2003-08-13  JP Rosevear  <jpr@ximian.com>
+
+	* Makefile.am: remove db3 hash stuff
+
 2003-07-24  Rodrigo Moya <rodrigo@ximian.com>
 
 	* e-config-listener.c (add_key): just preload one level of GConf keys,
